# condorgp

./: .coverage  .dockerignore  .envrc  .gitignore  .python-version  Dockerfile  Dockerfile_SNAP_for_DOTNET_install_stuck_220724  Dockerfile_builder  Dockerfile_latest_cmd  Dockerfile_latest_it  Dockerfile_latest_worker  Makefile  README.md  alembic.ini  alembic_file__env.py  docker-compose-api.yml  mono_crash.5905fc9cf.0.json  mono_crash.5905fc9cf.1.json  package-lock.json  pyproject.toml  rabbitmqadmin  requirements.txt  requirements_OUTDATED.txt  setup.py  sudo  temp_alembic_reset.txt  test.test
.docker/: condorgp_lean_build.dockerfile  op_nautilus.dockerfile
alembic/: env.py
cgp_api/: api_pyproject.toml  crud.py  database.py  main.py  models.py  schemas.py
cgp_db/: crud.py  main_api.py  models.py  schemas.py
cgp_rabbitmq/: get_rabbitmq_connection.py  sample_consumer.py  sample_publisher.py
condor/: status.py
condor_start/: begin_RUNS_NICELY.py  cell_runner.py  factory.py
condorgp/: __init__.py  cell.py  deap_condor.py  deap_experiment.py  deap_learning.py  deap_link_lean.py  deap_with_lean.py  gp_control.py  lean_runner.py  params.py  storage.py  utils.py
condorgp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker/: Dockerfile  Dockerfile_builder  Dockerfile_builder_wip  Dockerfile_cgp_api  Dockerfile_cgp_dev  Dockerfile_cgpstar  Dockerfile_new_start  Dockerfile_nt_builder  Dockerfile_start_again  build_docker.sh  dockerfile-fastapi  install_buildkit.sh
docker_compose/: docker-compose-db-graf-rmq.yml  docker-compose-lwb-streaming.yml  docker-compose.yml
gcp/: 00_move_VM_across_regions.py  deng_tag_entry.py  deng_upload_entry.py
k8s/: 01-configmap.yaml  03-persistent-volumes.yaml  04-postgres.yaml  06-grafana.yaml  07-worker.yaml  08-cgp-master.yaml  08-ingress.yaml  09-cgpstar.yaml  10-dev-container.yaml  apply_cgp_both_k8s.sh  delete_cgp_both_k8s.sh  images_push_k8s.sh  ingress-commands.sh  ingress_access.md  ingress_commands.sh  install_microk8s.sh  k8s_apply.sh  k8s_apply_2.sh  k8s_delete.sh  k8s_images_push.sh  k8s_reset_worker.sh  reg_k8s_start.sh  reg_start_k8s.sh  reset_certs_k8s.sh  reset_master_k8s.sh  setup-ingress.sh  setup-ingress__questionable.sh  setup_ingress.sh  tls_setup.md
kubernetes/: 0-ingress.yaml  00-ingress-service.yaml  020-cgp-database-service.yaml  022-cgp-database-cm0-configmap.yaml  023-cgp-database-pv.yaml  024-cgp-database-pvc.yaml  025-cgp-database-statefulset.yaml  050-cgp-grafana-service.yaml  051-cgp-grafana-deployment.yaml  053-cgp-grafana-env-configmap.yaml  054-cgp-grafana-cm0-configmap.yaml  090-cgp-worker-1-service.yaml  091-cgp-worker-1-deployment.yaml  1-cgp-database-cm0-configmap.yaml  2-cgp-database-pod.yaml  3-cgp-database-service.yaml  4-cgp-grafana-deployment.yaml  6-cgp-rabbitmq-deployment.yaml  7-cgp-rabbitmq-service.yaml  9-cgp-worker-1-cm0-configmap.yaml  9-cgp-worker-1-deployment.yaml
leanQC/: leanQC_THESE_instrutions.txt  leanQC_fitness_connection.txt  leanQC_instructions.txt  leanQC_simple_install_n_run.txt  leanQC_tree_output_OLD.txt  run_docker.sh
leanQC_OLD/: leanQC_simple_install_n_run.txt
rabbitmq/: sample_consumer.py  sample_publisher.py
scripts/: CAREFUL_git_reload_repo.sh  checking_env.sh  copy_reload_repo_script_back2.sh  establish_logs_n_checkpoints.sh  install_cgp_n_run_listener.sh  install_cgp_n_run_listener_1.sh  install_cgp_n_run_listener_2.sh  install_cgp_n_run_listener_3.sh  install_cgp_n_run_listener_4.sh  install_cgp_star.sh  reclone_cgp  reclone_cgp.sh  run_listener.sh  (+2 more)
(+531 files in other folders)
