[tool.poetry]
name = "condorgp"
version = "0.1.0"
description = "Genetic Programming fintech AI autotrading project"
authors = ["Hugh Harford <hugh.harford@poscoconsulting.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-api-core = "^2.20.0"
gcloud = "^0.18.3"
gsutil = "^5.30"
google-cloud-storage = "*"
google-cloud-datacatalog = "^3.20.1"
google-cloud-compute = "^1.19.2"
requests = "^2.32.3"
pika = ">=1.3.2"
pip = ">=24.3.1"
setuptools = ">=26"
twine = "^5.1.1"
wheel = ">=0.29"
numpy = "<2"
pandas = "^2.2.3"
black = "^24.10.0"
coverage = "^7.6.4"
flake8 = "^7.1.1"
pytest = "^8.3.3"
yapf = "^0.40.2"
six = ">=1.14"
joblib = "^1.4.2"
memoized-property = "^1.0.3"
termcolor = "^2.5.0"
ipython = "^8.28.0"
memory-profiler = "^0.61.0"
line-profiler = "^4.1.3"
deap = "^1.4.1"
pygame = ">=2.6.0"
pytest-bdd = "^7.3.0"
docker = "^7.1.0"
jq = "^1.8.0"
file-read-backwards = "^3.1.0"
nautilus-trader = "^1.205.0"
net-tools = "^0.1.2"

[tool.poetry.group.db_api.dependencies]
sqlalchemy = "^1.4.42"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
